--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-eslint": "^3.0.1",
     "gulp-image": "^2.7.2",
     "gulp-nodemon": "^2.2.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.2.0",
     "gulp-sass": "^2.3.2",
     "gulp-sass-lint": "^1.2.0",
