--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-postcss": "^6.2.0",
     "gulp-sass": "^2.3.2",
     "nodemon": "^1.11.0",
+    "postcss-pxtorem": "^3.3.1",
     "run-sequence": "^1.2.2",
     "webpack": "^1.13.3",
     "webpack-stream": "^3.2.0"
