--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "app": "^0.1.0",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
-    "express-validator": "^2.21.0"
+    "express-validator": "^2.21.0",
+    "hammerjs": "^2.0.8"
   }
 }
