--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.18.0",
     "browser-sync": "^2.17.5",
     "eslint-config-airbnb-base": "^9.0.0",
+    "eslint-plugin-import": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^3.0.1",
