--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.2.0",
     "gulp-sass": "^2.3.2",
+    "gulp-uglifycss": "^1.0.6",
+    "gulp-uglifyjs": "^0.6.2",
     "nodemon": "^1.11.0",
     "postcss-pxtorem": "^3.3.1",
     "run-sequence": "^1.2.2",
